# Agent-harness

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.agents/plans/: fix-knowledge-graph-group-id-and-quality.md  phase-1-core-mcp-server.md  phase-2-scan-repo-and-dashboard-endpoints.md  phase-2a-skill-engineering.md  phase-3-testing-and-readme.md  phase-4-publish-and-dashboard.md  phase-5-stability-temporal-forget.md
.agents/reference/: context_update.md  falkordb.md  fastapi.md  graphiti.md  mcp-server.md
.claude/: PRD.md  PRD2.md
.claude/skills/agent-harness/: SKILL.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: EdgeDetailOverlay.tsx  EpisodeList.tsx  GraphView.tsx  HealthIndicator.tsx  LeftPanel.tsx  NodeDetailPanel.tsx  NodeTooltip.tsx  ProjectList.tsx  SearchPanel.tsx  TimelinePanel.tsx
frontend/src/hooks/: useProjectGraph.ts  useProjects.ts  (+1 more)
src/: config.py  models.py  server.py
src/api/: routes.py
src/services/: briefing.py  knowledge.py  projects.py  scanner.py
src/tools/: __init__.py  forget.py  init_project.py  prime.py  recall.py  remember.py
tests/: test_briefing.py  test_config.py  test_knowledge_service.py  test_mcp_registration.py  test_projects_service.py  test_projects_service_crud.py  test_routes.py  test_scanner.py  test_smoke.py  test_tools_forget.py  test_tools_init_project.py  test_tools_prime.py  test_tools_recall.py  test_tools_remember.py
tests/integration/: conftest.py  test_e2e_full_workflow.py
(+8 files in other folders)
