[project]
name = "agent-harness"
version = "0.1.0"
description = "Persistent knowledge graph memory for AI coding agents"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0,<4.0",
    "graphiti-core[falkordb]>=0.28,<1.0",
    "falkordb>=1.0.0,<2.0.0",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "aiosqlite>=0.20",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "anyio>=4.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.0",
    "httpx>=0.27",
]

[project.scripts]
agent-harness = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
